--- a/Woofriend/RIBs/SignUp/SignUpViewController.storyboard
+++ b/Woofriend/RIBs/SignUp/SignUpViewController.storyboard
@@ -70,22 +70,8 @@
                                     <constraint firstAttribute="bottom" secondItem="tJ7-fn-b4B" secondAttribute="bottom" id="uJx-pe-AIH"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1lc-D0-u0Z">
-                                <rect key="frame" x="16" y="707" width="343" height="51"/>
-                                <color key="backgroundColor" red="0.71764705882352942" green="0.71764705882352942" blue="0.71764705882352942" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="51" id="JIy-MM-12n"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="16"/>
-                                <state key="normal" title="다음으로"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="8"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f0f-aA-H0e">
-                                <rect key="frame" x="0.0" y="100" width="375" height="591"/>
+                                <rect key="frame" x="0.0" y="100" width="375" height="678"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="3CC-H3-V1j">
                                     <size key="itemSize" width="128" height="128"/>
@@ -109,16 +95,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="lzw-qN-f1Y" firstAttribute="top" secondItem="HgA-Aw-ocO" secondAttribute="top" id="41H-wT-Ngd"/>
+                            <constraint firstItem="HgA-Aw-ocO" firstAttribute="bottom" secondItem="f0f-aA-H0e" secondAttribute="bottom" id="4uc-yv-6tY"/>
                             <constraint firstItem="f0f-aA-H0e" firstAttribute="top" secondItem="lzw-qN-f1Y" secondAttribute="bottom" id="NlT-dC-RVs"/>
                             <constraint firstItem="f0f-aA-H0e" firstAttribute="leading" secondItem="HgA-Aw-ocO" secondAttribute="leading" id="OIQ-hi-ifU"/>
-                            <constraint firstItem="1lc-D0-u0Z" firstAttribute="top" secondItem="f0f-aA-H0e" secondAttribute="bottom" constant="16" id="SlT-kB-MFa"/>
                             <constraint firstItem="f0f-aA-H0e" firstAttribute="top" secondItem="dKk-v3-t5W" secondAttribute="bottom" id="YKB-zx-oin"/>
-                            <constraint firstItem="1lc-D0-u0Z" firstAttribute="leading" secondItem="HgA-Aw-ocO" secondAttribute="leading" constant="16" id="aq1-4R-NCd"/>
-                            <constraint firstItem="HgA-Aw-ocO" firstAttribute="trailing" secondItem="1lc-D0-u0Z" secondAttribute="trailing" constant="16" id="bmk-6E-me0"/>
                             <constraint firstItem="HgA-Aw-ocO" firstAttribute="trailing" secondItem="lzw-qN-f1Y" secondAttribute="trailing" id="dq3-sv-Vu2"/>
                             <constraint firstItem="lzw-qN-f1Y" firstAttribute="leading" secondItem="HgA-Aw-ocO" secondAttribute="leading" id="hxI-kV-Eyi"/>
                             <constraint firstItem="HgA-Aw-ocO" firstAttribute="trailing" secondItem="f0f-aA-H0e" secondAttribute="trailing" id="ikj-bK-G61"/>
-                            <constraint firstItem="HgA-Aw-ocO" firstAttribute="bottom" secondItem="1lc-D0-u0Z" secondAttribute="bottom" constant="20" id="kcj-Sm-wwq"/>
                         </constraints>
                     </view>
                     <connections>
@@ -127,7 +110,6 @@
                         <outlet property="indicatiorTrailingConstraint" destination="oFE-eP-uqE" id="1zY-5b-5HY"/>
                         <outlet property="indicatorLabel" destination="tJ7-fn-b4B" id="5JW-wa-haU"/>
                         <outlet property="navigationView" destination="lzw-qN-f1Y" id="FI0-p1-FdZ"/>
-                        <outlet property="nextButton" destination="1lc-D0-u0Z" id="iiI-qf-d11"/>
                         <outlet property="titleLabel" destination="pRN-Sx-SaM" id="rcw-gR-TuY"/>
                     </connections>
                 </viewController>
